# librscrc

./: Cargo.toml  Readme.md
.circleci/: config.yml
benches/: crc32bench.rs  crc64bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: crc32.rs  custom_crc32.rs
sample_files/: test_data.txt  test_data_odd_size.txt
src/: lib.rs  prelude.rs
src/check32/: crc32.rs  crc32c.rs  custom_crc32.rs  mod.rs
src/check32/platform/: arm.rs  mod.rs  x86.rs
src/check64/: crc64ecma.rs  crc64iso.rs  custom_crc64.rs  mod.rs
src/crc32/: crc32.rs  crc32c.rs  custom_crc32.rs  mod.rs
