[package]
name = "librscrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
crc32fast = "1.3.2"

[[bench]]
name = "crc32bench"
harness = false

[features]
default = ["all"]
all = ["hardware"]
hardware = []

[dependencies]
