[package]
name = "librscrc"
version = "0.1.0"
edition = "2021"
description = "librscrc is a collection of crc32 algorithms with support for various approaches and custom polynomial."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
crc32fast = { version = "1.3.2" }

[[bench]]
name = "crc32bench"
harness = false

[features]
default = ["hardware"]
all = ["hardware", "nightly"]
hardware = []
nightly = []

[dependencies]
