[package]
name = "librscrc"
version = "0.1.0"
edition = "2021"
description = "librscrc is a collection of crc32 algorithms with support for various approaches and custom polynomial."
exclude = ["benches", "sample_files", ".circleci", ".gitignore"]
keywords = ["checksum", "crc32", "crc", "simd"]
readme = "Readme.md"
repository = "https://github.com/psvri/librscrc"
license = "MIT OR Apache-2.0"


[dev-dependencies]
criterion = "0.3"
crc32fast = { version = "1.3.2" }

[[bench]]
name = "crc32bench"
harness = false

[features]
default = ["hardware"]
all = ["hardware", "nightly"]
hardware = []
nightly = []

[dependencies]
